# peblo

./: README.md  README_zh.md  pyproject.toml
src/peblo/: __main__.py
src/peblo/cli/: main.py
src/peblo/cli/chat/: session.py
src/peblo/commons/io/: files.py
src/peblo/providers/: __init__.py  base.py  deepseek.py  ollama.py  ollama_provider.py  openrouter.py  qwen.py  registry.py
src/peblo/schemas/: chat.py  epubs.py  models.py
src/peblo/tools/: general.py  image.py  ocr.py  peek.py  summarize.py  text_input.py  translate.py
src/peblo/utils/: files.py
src/peblo/utils/io/: pdfs.py
