[project]
name = "peblo"
version = "0.0.1"
description = "Peblo is a growing collection of small, everyday intelligent tools."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "langdetect>=1.0.9",
    "requests>=2.32.5",
    "typer>=0.20.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
